--- a/index.html
+++ b/index.html
@@ -8,52 +8,9 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, viewport-fit=cover"
     />
-    <link rel="icon" href="/favicon.ico" />
     <title><%= title %></title>
-    <style>
-      .p-preloader {
-        display: -webkit-box;
-        display: -webkit-flex;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-box-align: center;
-        -webkit-align-items: center;
-        -ms-flex-align: center;
-        align-items: center;
-        -webkit-box-pack: center;
-        -webkit-justify-content: center;
-        -ms-flex-pack: center;
-        justify-content: center;
-        position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        z-index: 2;
-        background-color: #fff;
-        color: #c8c9cc;
-      }
-
-      .p-preloader__icon {
-        box-sizing: border-box;
-        width: 40px;
-        height: 40px;
-        margin: 0 auto 10px;
-      }
-
-      .p-preloader__icon svg {
-        margin: 0 auto 10px;
-        width: 40px;
-        height: 40px;
-      }
-
-      .p-preloader__label {
-        font-size: 14px;
-        text-align: center;
-        letter-spacing: 2px;
-        padding-left: 2px;
-      }
-    </style>
+    <link rel="icon" href="/favicon.ico" />
+    <link rel="stylesheet" href="/index.css" />
   </head>
   <body>
     <div id="app">
@@ -92,6 +49,5 @@
       </div>
     </div>
     <script type="module" src="/src/main.ts"></script>
-    <!-- built files will be auto injected -->
   </body>
 </html>
